...
                                                <constraint firstItem="cfe-zZ-1NO" firstAttribute="top" secondItem="5rg-tW-d3t" secondAttribute="top" constant="4" id="x26-lt-tAM"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <connections>
                                            <outlet property="cellImage" destination="cfe-zZ-1NO" id="B5I-7L-b7o"/>
                                            <outlet property="dateLabel" destination="9i7-de-CIn" id="Lk5-t5-se2"/>
                                            <outlet property="likeButton" destination="ZcW-BH-aFn" id="Ib1-0Z-www"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Y0d-MN-yki"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="G44-X1-cLC"/>
...
                                    <constraint firstAttribute="height" constant="60" id="eGg-zO-oxG"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vKn-be-7A4">
                                <rect key="frame" x="16" y="750" width="408" height="48"/>
                                <color key="backgroundColor" name="White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ktL-LQ-sVH"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
...
