...
    
    //MARK: - Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        setupProgressObserver()
        
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
    }
...
